<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MercBisAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="stocksTV">stocks</string>
    <string name="stocksTB">Stocks</string>
    <string name="marketTB">Market</string>
    <string name="portfolioTB">Portfolio</string>
    <string name="title_activity_stocks">StocksActivity</string>
    <string name="markettest">This is the market window</string>
    <string name="portfoliotest">This is the portfolio window</string>
    <string name="stockstest">This is the stocks window</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search stocks</string>
    <string name="title_activity_stock">Detailed Stock View</string>
	<string name="StockNews">This is the StockNews fragment</string>
	<string name="StockInfo">This is the StockInfo Fragment</string>
	<string name="StockGraph">This is the StockGraph</string>
	
	<string name="one_day">1 day      </string>
    <string name="one_week">1 week     </string>
    <string name="thirty_days">30 Days    </string>
    
    <string name="candle_stick">Candlestick</string>
    <string name="line_chart">Linechart  </string>
    <string name="bar_chart">Barchart   </string>

</resources>
